--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Date: 01-22-2022
+# Date: 08-11-2022
 
 # Minimum requirements for a plotly dash application
 Brotli==1.0.9
@@ -19,3 +19,11 @@ Werkzeug==2.0.2
 
 # Required for deployment on Heroku
 gunicorn==20.1.0
+
+# Astro packages:
+astropy
+
+
+# Other packages
+pandas
+numpy
