--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ plotly==5.5.0
 six==1.16.0
 tenacity==8.0.1
 Werkzeug==2.0.2
+dash_bootstrap_templates
 
 # Required for deployment on Heroku
 gunicorn==20.1.0
